# feature-exploring

./: .gitignore
cpp/: CMakeLists.txt  build.sh
cpp/base_file_name/: a.out  logger.h  main.cpp
cpp/branch_predictor_hw/: branch_predictor_test.py
cpp/btree_iterators/: a.out  btree.hpp  main.cpp
cpp/callable/: a.out  main
cpp/cli/: CMakeLists.txt  a.out  main.cpp  main2.cpp
cpp/cli/complex_cli/: cli_my_spi_dev.hpp  cli_spi_bus_number.hpp  my_spi_dev  spi_bus.hpp
cpp/cli/simple_cli/: main2.cpp  simple_cli
cpp/cmake_helpers/: all_helper.cmake  clang_tidy.cmake  clang_tidy_config.cmake  compiler_flags.cmake  install_binary.cmake  install_library.cmake  iwyu.cmake  iwyu_config.cmake  tool_helper.cmake  tool_helper_config.cmake
cpp/cmake_multiple_lib_deps/: CMakeLists.txt  build.sh
cpp/cmake_multiple_lib_deps/kita_alef/: CMakeLists.txt  add.cpp  sub.cpp
cpp/cmake_multiple_lib_deps/kita_bet/: CMakeLists.txt  mul.cpp
cpp/cmake_multiple_lib_deps/my_main/: CMakeLists.txt  main.cpp
cpp/cmake_options/: main.cpp
cpp/concepts/: CMakeLists.txt  a.out  callable.hpp  callable_func_main.cpp  main.cpp  number_main.cpp
cpp/features/: CMakeLists.txt
cpp/features/arena_allocator/: CMakeLists.txt  a.out  arena_allocator.cpp
cpp/features/base_file_name/: CMakeLists.txt  logger.h
cpp/features/benchamrks_tracer/: a.out  main.cpp  timestamp.hpp  timestamp_collector.hpp
cpp/features/btree_iterators/: CMakeLists.txt
cpp/features/callable/: main.cpp  my_class.hpp
cpp/features/cli/: CMakeLists.txt
cpp/features/cmake_options/: CMakeLists.txt
cpp/features/concepts/: a.out  container_main.cpp  main.cpp  walk_like_a_duck.cpp
cpp/features/enum_nondiscard/: a.out  main.cpp
cpp/features/expected/: a.out  expected.hpp  main.cpp
cpp/features/func_measuring/: CMakeLists.txt  tester.hpp
cpp/features/function_callbacks/: a.out  main.cpp
cpp/features/include_what_you_use/: README.txt  header1.cpp  main.cpp  run_on_current_files.sh
cpp/features/macro_log_line/: CMakeLists.txt
cpp/features/macro_va_opt/: main  main.cpp  main_va_opt
cpp/features/memory_pool/: CMakeLists.txt
cpp/features/nlohman_tuple/: main.cpp
cpp/features/prbs32/: main.cpp
cpp/features/pseudo_random_distribution/: a.out  main.cpp
cpp/features/q_rsqrt/: a.out  main.cpp
cpp/features/ranges/: a.out
cpp/features/run_python_file/: main_popen.cpp
cpp/features/small_string_optimization/: README.txt  main.cpp
cpp/features/stack_size/: a.out  main.cpp
cpp/features/string_file_creation/: a.out
cpp/features/type_erasure/: CMakeLists.txt
cpp/features/type_erasure_dispatcher/: CMakeLists.txt
cpp/features/unity_build/: CMakeLists.txt  unity_build.cpp
cpp/features/variant_queue/: main.cpp
cpp/features/variant_socket/: CMakeLists.txt  client_main.cpp  server_main.cpp
cpp/features/vectorizatin_flags/: a.out
cpp/features/weak_ptr/: a.out  main.cpp
cpp/func_measuring/: tester.hpp
cpp/include_what_you_use/: a.out  header1.hpp  header2.cpp  header2.hpp  run_on_current_files.sh
cpp/memory_allocator/: CMakeLists.txt  main.cpp
cpp/nlohman_tuple/: a.out
cpp/optimization_txts/: code_optimizations.txt  compiler_optimizations.txt
cpp/prbs32/: a.out  prbs_size.py
cpp/ranges/: main.cpp
cpp/run_python_file/: CMakeLists.txt  main.cpp  py_popen  test.py
cpp/run_python_file/cmake/: run_python_test
cpp/set_vs_array_tests/: main.cpp
cpp/small_string_optimization/: a.out
cpp/sort/: a.out  bubble_sort_main_perf.cpp  main.cpp  tester.hpp
cpp/std_map_tests/: a.out  map100k.txt  map_generator.cpp  static_map_tests.cpp
cpp/std_map_tests/hash_vs_tree_map/: main.cpp
cpp/string_file_creation/: main.cpp
cpp/struct_serialization/: a.out  main.cpp
cpp/tests/: CMakeLists.txt
cpp/tests/advent_of_code_2022_day6_tuning_trouble_part2/: README.txt  a.out  logger.hpp  main.cpp  start_of_message_marker_capable.cpp  start_of_message_marker_capable.hpp
cpp/tests/atomic_vs_lock/: CMakeLists.txt  a.out  main.cpp
cpp/tests/buf_to_string/: CMakeLists.txt  a.out  buf_to_string.cpp  logger..hpp
cpp/tests/inplace_transpose/: CMakeLists.txt
cpp/tests/list_vs_vector_insert_erase/: CMakeLists.txt
cpp/tests/malloc_tests/: CMakeLists.txt  a.out  a_out  a_output  allocate.cpp  memcpy_for.cpp
cpp/tests/python_run_bash_tests/: run_bash_commands.py
cpp/tests/set_vs_array_tests/: CMakeLists.txt
cpp/tests/simd_memcpy/: CMakeLists.txt  a.out  main.cpp
cpp/tests/spdlog_test/: CMakeLists.txt
cpp/tests/standard_for_each/: CMakeLists.txt  a.out  main.cpp
cpp/tests/std_map_tests/: CMakeLists.txt  map100k.hpp  map_generator  static_map_tests.hpp
cpp/tests/type_erasure/: CMakeLists.txt  a.out  compare_type_erasure_serialize.cpp
cpp/tests/unordered_set_copy_measuring/: main.cpp
cpp/tests/valgrind_heap_allocation/: README.txt  a.out  main.cpp  massif.out.371  output.logg  xtmemory.kcg.371
cpp/type_erasure/: main.cpp
cpp/type_erasure/sbo_te/: a.out  main.cpp  shape_te.hpp
cpp/type_erasure/shapes/: circle.hpp
cpp/type_erasure/small_buffer_optimization_type_erasure/: CMakeLists.txt  main.cpp
cpp/type_erasure/unique_ptr_simple_type_erasure/: main.cpp  shape_te.hpp
cpp/type_erasure/unique_ptr_te/: a.out  rect.hpp
cpp/type_erasure/unique_ptr_te_simple/: main.cpp  shape_drawing.hpp  shape_te.hpp
cpp/type_erasure/unique_ptr_type_erasure/: main.cpp  shape_te.hpp
cpp/unity_build/: CMakeLists.txt
cpp/unity_build/srcs/: CMakeLists.txt  create_cmake_unity_build_stdout.py  custom_class_0.cpp  custom_class_1.cpp  custom_class_10.cpp  custom_class_100.cpp  custom_class_11.hpp  custom_class_12.cpp  custom_class_12.hpp  custom_class_13.cpp  custom_class_14.cpp  custom_class_14.hpp  custom_class_15.hpp  custom_class_16.hpp  custom_class_17.cpp  custom_class_17.hpp  custom_class_18.cpp  custom_class_18.hpp  custom_class_19.cpp  custom_class_2.cpp  custom_class_20.cpp  custom_class_21.hpp  custom_class_23.hpp  custom_class_24.cpp  custom_class_24.hpp  (+81 more)
cpp/variant_queue/: a.out
cpp/variant_socket/: connect_data.h  variant_socket.cpp
cpp/vectorizatin_flags/: main.cpp
cpp/weak_ptr/: main
(+183 files in other folders)
